@@ -9,6 +9,14 @@
         <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="dist/karma.min.css">
+        <style type="text/css">
+            .example-grid .row>.col, .example-grid .row>[class^=col-] {
+                padding-top: .75rem;
+                padding-bottom: .75rem;
+                background-color: #f0f0f0;
+                border: 1px solid #e6e6e6;
+            }
+        </style>
     </head>
     <body style="padding: 5rem;">
         <header role="banner">
@@ -18,6 +26,12 @@
         <br/>
         <nav role="navigation">
             <ul>
+                <li>
+                    <a href="#grid">Grid</a>
+                    <ul>
+                        <li><a href="#grid_examples">Examples</a></li>
+                    </ul>
+                </li>
                 <li>
                     <a href="#text">Text</a>
                     <ul>
@@ -59,6 +73,75 @@
             </ul>
         </nav>
         <main role="main">
+            <section id="grid">
+                <header><h1>Grid</h1></header>
+                <article id="grid_examples">
+                    <header><h1>Examples</h1></header>
+                    <div class="container-fluid example-grid">
+                        <div class="row">
+                            <div class="col-md-1">.col-md-1</div>
+                            <div class="col-md-11">.col-md-11</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-2">.col-md-2</div>
+                            <div class="col-md-10">.col-md-10</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-3">.col-md-3</div>
+                            <div class="col-md-9">.col-md-9</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4">.col-md-4</div>
+                            <div class="col-md-8">.col-md-8</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-5">.col-md-5</div>
+                            <div class="col-md-7">.col-md-7</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">.col-md-6</div>
+                            <div class="col-md-6">.col-md-6</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-7">.col-md-7</div>
+                            <div class="col-md-5">.col-md-5</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-8">.col-md-8</div>
+                            <div class="col-md-4">.col-md-4</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-9">.col-md-9</div>
+                            <div class="col-md-3">.col-md-3</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-10">.col-md-10</div>
+                            <div class="col-md-2">.col-md-2</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-11">.col-md-11</div>
+                            <div class="col-md-1">.col-md-1</div>
+                        </div>
+                        <p></p>
+                        <div class="row">
+                            <div class="col-md">.col-md</div>
+                            <div class="col-md">.col-md</div>
+                            <div class="col-md">.col-md</div>
+                        </div>
+                        <p></p>
+                        <div class="row">
+                            <div class="col-md-6 offset-md-3">.col-md-6 .offset-md-3</div>
+                        </div>
+                        <p></p>
+                        <div class="row">
+                            <div class="col-md-6 order-md-2">.col-md-6 .order-md-2</div>
+                            <div class="col-md-6 order-md-1">.col-md-6 .order-md-1</div>
+                        </div>
+                    </div>
+                    <p></p>
+                    <footer><p><a href="#top">[Top]</a></p></footer>
+                </article>
+            </section>
             <section id="text">
                 <header><h1>Text</h1></header>
                 <article id="text__headings">
