@@ -5,6 +5,7 @@ Changelog
 ~~~~~~~~~~~~~~~~~~~~~~
 
  * Added default button examples to test.html
+ * Added basic grid examples to test.html
 
 1.3.0 - 05-Jul-2017
 ~~~~~~~~~~~~~~~~~~~
